# couchbase_pooler

./: Cargo.toml  Dockerfile  README.md  prod.sh  run.sh
couchbase-rs/couchbase/: Cargo.toml
couchbase-rs/couchbase-sys/: Makefile  build.rs  headers-2.10.3.h
r2d2_couchbase/: Cargo.toml
r2d2_couchbase/src/: lib.rs
r2d2_couchbase/tests/: test.rs
src/: main.rs
