[package]
name = "cb_couchbase_pooler"
version = "0.1.0"
authors = ["Pooya Woodcock <pooya@multimediallc.com>"]
edition = "2018"

[dependencies]
log = "0.4.6"
env_logger = "0.6.0"
couchbase = { version="0.3.0", path = "./couchbase-rs/couchbase" }
r2d2 = "0.7"
r2d2_couchbase = { version="0.1.0", path = "./r2d2_couchbase" }
rouille = "3.0.0"
serde_json = "1.0.39"
futures = "0.1.25" 
rand = "0.6.5"
